<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_preview"
        android:summary="@string/pref_description_news_bar"
        android:title="@string/pref_title_news_bar" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_news_bar_display_position_list_titles"
        android:entryValues="@array/pref_news_bar_display_position_list_values"
        android:key="news_bar_display_position"
        android:summary="%s"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_news_bar_display_position" />

    <ListPreference
        android:defaultValue="200"
        android:entries="@array/pref_news_bar_display_speed_list_titles"
        android:entryValues="@array/pref_news_bar_display_speed_list_values"
        android:key="news_bar_display_speed"
        android:summary="%s"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_news_bar_display_speed" />

    <MultiSelectListPreference
        android:dialogTitle="@string/pref_news_text_style"
        android:key="news_bar_text_style"
        android:title="@string/pref_news_text_style"
        android:entries="@array/pref_news_text_style_titles"
        android:entryValues="@array/pref_news_text_style_values"
        android:defaultValue="@array/text_style_empty_array"
        android:persistent="true"
        />

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/pref_news_bar_display_text_size_list_values"
        android:entryValues="@array/pref_news_bar_display_text_size_list_values"
        android:key="news_bar_display_text_size"
        android:summary="%s"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_news_bar_display_text_size" />

</PreferenceScreen>
