<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="czdev.newsfeedsbar.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="czdev.newsfeedsbar.SettingsActivity$DisplayPreferenceFragment"
        android:icon="@android:drawable/ic_menu_crop"
        android:title="@string/pref_header_display" />

    <header
        android:fragment="czdev.newsfeedsbar.SettingsActivity$AboutPreferenceFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/pref_title_about" />

</preference-headers>
